# lidar-2dgs-pipeline

./: 6.0  test_octree_stream.py  verify_octree.py
lidar-2dgs/: .gitignore  README.md  ScreenCamera_2026-02-12-09-36-40.json  VIEWER_TROUBLESHOOTING.md  convert_large_las.py  convert_large_las_streaming.py  gpu_draw_test.py  gui2.py  pyproject.toml  requirements.txt  run_conversion.py  screenshot_test.py  simple_viewer.py  streaming_converter.py  test_opengl.py  test_points.py
lidar-2dgs/config/: default.yaml
lidar-2dgs/docs/: API.md
lidar-2dgs/src/: ar_export.py  cache.py  export_ply.py  io_parallel.py  las_io.py  logger.py  metrics.py  normals.py  normals_large.py  preprocess.py  security.py  surfels.py  txt_io.py
lidar-2dgs/src/viewer/: __init__.py  chunk_storage.py  octree_types.py  opengl_renderer.py  streaming_viewer.py
lidar-2dgs/tests/: __init__.py  test_edge_cases.py  test_export.py  test_gpu.py  test_integration.py  test_normals.py  test_performance.py  test_preprocess.py  test_surfels.py  test_txt_io.py  test_viewer.py
lidar-2dgs/tools/: export_ar.py  streaming_viewer_main.py  txt_to_2dgs.py  txt_to_2dgs_large.py
pc_to_2dgs/: .gitignore  DepthCamera_2026-02-26-15-48-23.json  DepthCamera_2026-02-26-16-49-15.json  README.md  gui.py  main.py  requirements.txt  test_export_ply.py  test_integration.py  test_normals.py  test_preprocess.py  test_surfels.py  test_txt_io.py  viewer.py
pc_to_2dgs/data/output/: .gitkeep
pc_to_2dgs/src/: __init__.py  export_ply.py  normals.py  octree_io.py  preprocess.py  surfels.py  txt_io.py
pc_to_2dgs/tools/: txt_to_2dgs.py  viewer.py
